Atualizando as views de "quarto","cliente" e "reserva" para tradução e formatação de texto.

--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -6,5 +6,5 @@
 
 <div class='link-to-div'>
   <%= link_to "Exibir cliente", @cliente %>
-  <%= link_to "Clientes", clientes_path %>
+  <%= link_to "Retornar aos clientes", clientes_path %>
 </div>
