--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class='link-show'>
   <%= link_to "Editar cliente", edit_cliente_path(@cliente) %>
-  <%= link_to "Voltar para clientes", clientes_path %>
+  <%= link_to "Retornar aos clientes", clientes_path %>
   <%= button_to "Remover cliente", @cliente, method: :delete %>
 </div>
 
