--- a/app/views/quartos/_quarto.html.erb
+++ b/app/views/quartos/_quarto.html.erb
@@ -10,17 +10,17 @@
   </p>
 
   <p class='show-item'>
-    <strong>Disponibilidade:</strong>
+    <strong>Disponibilidade para Locação:</strong>
     <%= quarto.disponibilidade ? "Disponível" : "Indisponível" %>
   </p>
 
   <p class='show-item'>
-    <strong>Preco diaria:</strong>
+    <strong>Preco da Diária (R$):</strong>
     <%= quarto.preco_diaria %>
   </p>
 
   <p class='show-item'>
-    <strong>Descricao:</strong>
+    <strong>Descrição Adicional:</strong>
     <%= quarto.descricao %>
   </p>
 
