--- a/app/views/reservas/new.html.erb
+++ b/app/views/reservas/new.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div class='link-to-div'>
-  <%= link_to "Back to reservas", reservas_path %>
+  <%= link_to "Retornar às reservas", reservas_path %>
   <%= link_to "Home", root_path %>
 </div>
