--- a/app/views/reservas/show.html.erb
+++ b/app/views/reservas/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class='link-show'>
   <%= link_to "Editar reserva", edit_reserva_path(@reserva) %>
-  <%= link_to "Voltar para reservas", reservas_path %>
+  <%= link_to "Retornar às reservas", reservas_path %>
   <%= button_to "Remover reserva", @reserva, method: :delete %>
 </div>
 
