--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div class='link-to-div'>
-  <%= link_to "Clientes", clientes_path %>
+  <%= link_to "Retornar aos clientes", clientes_path %>
   <%= link_to "Home", root_path %>
 </div>
