--- a/app/views/quartos/edit.html.erb
+++ b/app/views/quartos/edit.html.erb
@@ -6,6 +6,6 @@
 
 <div class='link-to-div'>
   <%= link_to "Exibir quarto", @quarto %>
-  <%= link_to "Quartos", quartos_path %>
+  <%= link_to "Retornar aos quartos", quartos_path %>
 </div>
 
