--- a/app/views/quartos/index.html.erb
+++ b/app/views/quartos/index.html.erb
@@ -18,6 +18,6 @@
 <br><br>
 
 <div class='links'>
-  <%= link_to "Cadastrar Quarto", new_quarto_path %>
+  <%= link_to "Cadastrar quarto", new_quarto_path %>
   <%= link_to "Home", root_path %>
 </div>
