--- a/app/views/quartos/new.html.erb
+++ b/app/views/quartos/new.html.erb
@@ -5,7 +5,7 @@
 <br>
 
 <div class='link-to-div'>
-  <%= link_to "Quartos", quartos_path %>
+  <%= link_to "Retornar aos quartos", quartos_path %>
   <%= link_to "Home", root_path %>
 </div>
 
