--- a/app/views/quartos/show.html.erb
+++ b/app/views/quartos/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class='link-show'>
   <%= link_to "Editar quarto", edit_quarto_path(@quarto) %>
-  <%= link_to "Voltar para quartos", quartos_path %>
+  <%= link_to "Retornar aos quartos", quartos_path %>
   <%= button_to "Remover quarto", @quarto, method: :delete %>
 </div>
 
