--- a/app/views/quartos/index.html.erb
+++ b/app/views/quartos/index.html.erb
@@ -11,6 +11,7 @@
   <div id='search-price'>
     <%= form_with(url: quartos_path, method: 'get', local: true) do %>
       <%= hidden_field_tag(:disponibilidade, params[:disponibilidade]) %>
+      <%= number_field_tag(:min_price, params[:min_price], placeholder: 'Preço Mínimo') %>
       <%= number_field_tag(:max_price, params[:max_price], placeholder: 'Preço Máximo') %>
       <%= submit_tag("Procurar por preço") %>
     <% end %>
