--- a/app/views/quartos/_form.html.erb
+++ b/app/views/quartos/_form.html.erb
@@ -2,7 +2,7 @@
   <div class='errors'>
     <% if quarto.errors.any? %>
       <div style="color: red">
-        <h2><%= pluralize(quarto.errors.count, "error") %> prohibited this quarto from being saved (hover to see)</h2>
+        <h2><%= pluralize(quarto.errors.count, "erro") %> impedem este quarto de ser criado (passe o mouse por cima para ver mais detalhes)</h2>
 
         <ul>
           <% quarto.errors.each do |error| %>
