Atualizando a label :custo de "reservas/form_html.erb"

--- a/app/views/reservas/_form.html.erb
+++ b/app/views/reservas/_form.html.erb
@@ -35,7 +35,7 @@
     </div>
 
     <div class='labels'>
-      <%= form.label :custo, 'Custo', style: "display: block", for: 'custo-field' %>
+      <%= form.label :custo, 'Custo (R$)', style: "display: block", for: 'custo-field' %>
       <%= form.text_field :custo, readonly: true, id: 'custo-field' %>
     </div>
 
