--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,368 +1,96 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Noto+Serif&family=Poppins:wght@300;500;600;700&display=swap');
 
-*{
+/* ESTILO GERAL - INÍCIO */
+* {
     font-family: 'Noto Serif', serif;
-    box-sizing: border-box;
     font-size: 16px;
+    padding: 0;
+    margin: 0;
+}
+
+html {
+    height: 100%;
+}
+
+body {
+    position: relative;
+    min-height: 100%;
+}
+
+header {
+    background-color: #f39b13;
+    width: 100%;
+    top: 0;
+    left: 0;
+    color: white;
+    font-size: 24px;
+}
+
+header nav ul {
+    background-color: #c27c0f;
+    list-style: none;
     margin: 0;
     padding: 0;
 }
 
-html, body, main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    user-select: none;
-    flex-direction: column;
-    background-color: beige;
-}
-
-#up-h1{
-    margin-top: 20px;
-    font-size: 2.5rem;
-}
-
-/* New and Edit pages */
-.labels{
-    display: flex;
-    flex-direction: column ;
-
-    width: 50vw;
-}
-
-.labels label{
-    font-size: 1.1rem;
-    width: 100%;
-}
-
-.labels input, .labels textarea, .labels select{
-    background-color: rgba(30, 218, 155, 0.438);
-    border-radius: 5px;
-    width: 100%;
-}
-
-.labels textarea{
-    resize: none;
-    height: 100px;
-}
-
-input[type="checkbox"] {
-    all: unset;
-    width: 20px;
-    height: 20px;
+header nav ul li {
     display: inline-block;
-    border: 1px solid black;
-    border-radius: 20px;
-    background-color: red;
-    cursor: pointer;
-}
-input[type="checkbox"]:checked {
-    background-color: rgb(1 116 30);
+    margin-right: 20px;
+    margin-left: 20px;
+    transition: text-shadow 0.3s ease;
 }
 
-.submit{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.submit input, .submit input[type="submit"]{
-    padding: 10px;
-    margin-top: 5px;
-    width: 60%;
-    font-size: 1.2rem;
-    font-weight: bold;
-    border: none;
-    border-radius: 15px;
-    background-color: rgb(54 223 166);
+.content {
+    margin: 10px;
 }
 
-.submit input:hover, .submit input[type="submit"]:hover{
-    background-color: rgb(30 218 155);
-    cursor: pointer;
-}
-
-.link-to-div{
-    display: flex;
-    flex-direction: row;
+footer {
+    background-color: black;
+    color: white;
+    bottom: 0;
+    position: absolute;
     width: 100%;
-    align-items: center;
-    justify-content: center;
-    gap: 2px;
-}
-.link-to-div a{
-    text-decoration: none;
-    padding: 4px;
-    background-color: rgb(0 115 126);
-    color: white;
-    width: 30%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-top: 0;
-    text-align: center;
-    border-radius: 10px;
+    font-size: 12px;
 }
 
-.link-to-div a:hover{
-    background-color: rgb(1 61 66);
+/* ESTILO GERAL - FIM */
+
+/* RODA DE IMAGENS - INÍCIO */
+/* Contâiner de Cada Célula */
+.gallery-cell {
+    width: 300px;
+    height: 230px;
+    margin-right: 10px;
+    background: #fcbe03;
+    counter-increment: gallery-cell;
 }
 
-.labels select:hover, .labels input[type="text"]:hover, .labels textarea:hover{
-    font-weight: bold;
-    background-color: rgba(30 218 155 57.5%);
-}
-/* End of New and Edit pages */
-
-/* Home page */
-
-#app-name{
-    font-size: 4rem;
-    margin-top: -30%;
-}
-
-#descricao{
-    margin: 5% 0;
-}
-
-#body-home{
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-}
-
-#home-buttons{
-    display: flex;
-}
-
-.home-btn{
-    border: none;
-    background-color: rgb(14 138 41);
-    border-radius: 10px;
-    padding: 15px;
-    margin: 5px; width: 200px;
-}
-
-.home-btn a{
-    text-decoration: none;
-}
-
-.home-btn:hover{
-    background-color: rgb(24 160 53);
-    cursor: pointer;
-}
-
-/* End of Home Page */
-
-/* Error messages */
-
-.errors h2{
-    cursor: pointer;
-}
-
-.errors ul{
-    display: none;
-    position: absolute;
-    list-style: none;
-    background-color: beige;
-    width: 50%;
-    box-shadow: 0 8px 16px 0 rgba(0 0 0 20%);
-    z-index: 1;
-}
-
-.errors h2:hover + ul{
+/* Espaços de Margem */
+.gallery-cell:before {
     display: block;
-}
-
-/* End of error messages */
-
-/* Index pages */
-
-
-.list{
-    width: 80vw;
-    margin-top: 5%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto;
-}
-
-.show-grid {
-    background-color: rgb(1 73 95);
+    text-align: center;
     color: white;
-    margin: 1px;
-    padding: 10px;
-    border-radius: 10px;
+}
+
+/* Elemento "Div" da Célula */
+.gallery-cell-div {
+    width: 100%;
+    height: 100%;
     text-align: center;
+    transition: background-color 0.3s ease, color 0.3s ease, font-size 0.3s ease;
 }
 
-.show-grid a{
-    color: rgb(105 191 231);
-    text-decoration: none;
-}
-
-.links{
-    margin-top: 5%;
-    display: flex;
-    gap: 3px;
-    position: fixed;
-    bottom: 10%;
-}
-
-.links a{
-    margin: 5px;
-    padding: 10px;
-    text-decoration: none;
-    background-color: rgb(0 104 122);
-    color: white;
-    border-radius: 10px;
-    text-align: center;
-    width: 200px;
-}
-
-.links a:hover{
-    background-color: rgb(0 174 218);
+/* Botão do Elemento "Div" da Célula */
+.gallery-cell-div button {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
     cursor: pointer;
+    width: inherit;
+    color: inherit;
+    font-size: inherit;
 }
+/* RODA DE IMAGENS - FIM */
 
-/* End of Index pages */
-
-/* Show pages */
-
-.showing{
-    display: flex;
-    flex-direction: column;
-    margin-top: 20%;
-}
-
-.show-item, .show-item strong{
-    font-size: 1.2rem;
-}
-
-.link-show{
-    display: flex;
-    gap: 5px;
-    margin-top: 10%;
-}
-
-.link-show a{
-    text-decoration: none;
-    text-align: center;
-}
-
-.link-show button{
-    border: 0;
-}
-
-.link-show a, .link-show button, #links a, #links button{
-    background-color: rgb(0 85 212);
-    color: whitesmoke;
-    margin-top: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    width: 200px;
-}
-
-.link-show a:hover, .link-show button:hover{
-    background-color: rgb(0 115 255);
-    cursor: pointer;
-}
-
-#links{
-    display: flex;
-    gap: 5px;
-}
-
-#links a{
-    text-decoration: 0;
-    text-align: center;
-    width: calc(600px + 10px);
-    background-color: rgb(2 163 42);
-}
-
-#links a:hover{
-    background-color: rgb(0 212 53);
-}
-
-/* End of Show pages */
-
-/* Index buttons */
-
-
-.index-btn{
-    margin-top: 20px;
-    display: flex;
-    width: 700px;
-    gap: 6px;
-}
-
-.index-btn a{
-    text-decoration: none;
-    background-color: rgb(3, 110, 3);
-    color: white;
-    padding: 10px;
-    border-radius: 10px;
-    flex-grow: 1;
-    text-align: center;
-}
-
-.index-btn a:hover{
-    background-color: rgb(0 174 0);
-    cursor: pointer;
-}
-
-#search-price{
-    margin-top: 10px;
-    position: absolute;
-    right: 10%;
-    top: 135px;
-}
-
-#search-price input[type='number']{
-    background-color: rgba(4, 175, 75, 0.575);
-    padding: 5px;
-}
-
-#search-price input[type='number']::placeholder{
-    color: black;
-    font-weight: bold;
-}
-
-#search-price input[type='submit']{
-    background-color: rgb(1, 161, 161);
-    border-radius: 10px;
-    padding: 5px;
-}
-
-#search-price input[type='submit']:hover{
-    background-color: rgb(0 212 212);
-    cursor: pointer;
-}
-
-/* End of Index buttons */
-
-/* Search client */
-
-#search-client{
-    justify-items: center;
-    margin-top: 20px;
-    position: fixed;
-    right: 10%;
-    top: 6%;
-}
-
-#search-client input[type='text']{
-    background-color: rgba(4, 175, 75, 0.575);
-    padding: 5px;
-}
-
-#search-client input[type='submit']{
-    background-color: rgb(1, 161, 161);
-    border-radius: 10px;
-    padding: 5px;
-}
-
-#search-client input[type='submit']:hover{
-    background-color: rgb(0 212 212);
-    cursor: pointer;
-}
-
-/* End of Search client */
+/* ESTILO DO CONTEÚDO - INÍCIO */
