--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,109 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>HotelSim</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>Hotel Sim</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-  <body>
-    <%= yield %>
-  </body>
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  <%= favicon_link_tag asset_path('favicon.ico') %>
+  <%= javascript_importmap_tags %>
+</head>
+
+<body>
+
+<header>
+  <%= link_to image_tag("icone.png", size: '50x50') + "Hotel Sim", root_path,
+              style: "font-size: inherit; color: inherit; text-decoration: none;
+      display: flex; justify-content: center; align-items: center; width: max-content;
+      margin-left: 44%" %>
+  <nav>
+    <ul>
+      <li id="link-to-root"
+          onmouseover=sombrear("link-to-root")
+          onmouseout=resetarSombrear("link-to-root")>
+        <%= link_to root_path, style: "font-size: 16px; color: inherit; text-decoration: none;" do %>
+          Página Principal
+        <% end %>
+      </li>
+      <li id="link-to-clientes"
+          onmouseover=sombrear("link-to-clientes")
+          onmouseout=resetarSombrear("link-to-clientes")>
+        <%= link_to clientes_path, style: "font-size: 16px; color: inherit; text-decoration: none;" do %>
+          Ver todos os Clientes
+        <% end %>
+      </li>
+      <li id="link-to-quartos"
+          onmouseover=sombrear("link-to-quartos")
+          onmouseout=resetarSombrear("link-to-quartos")>
+        <%= link_to quartos_path, style: "font-size: 16px; color: inherit; text-decoration: none;" do %>
+          Acessar Quartos
+        <% end %>
+      </li>
+      <li id="link-to-reservas"
+          onmouseover=sombrear("link-to-reservas")
+          onmouseout=resetarSombrear("link-to-reservas")>
+        <%= link_to reservas_path, style: "font-size: 16px; color: inherit; text-decoration: none;" do %>
+          Gerenciar Reservas
+        <% end %>
+      </li>
+      <li id="link-to-create-clientes"
+          onmouseover=sombrear("link-to-create-clientes")
+          onmouseout=resetarSombrear("link-to-create-clientes")>
+        <%= link_to new_cliente_path, style: "font-size: 16px; color: inherit; text-decoration: none;" do %>
+          Cadastrar um Cliente
+        <% end %>
+      </li>
+      <li id="link-to-create-quartos"
+          onmouseover=sombrear("link-to-create-quartos")
+          onmouseout=resetarSombrear("link-to-create-quartos")>
+        <%= link_to new_quarto_path, style: "font-size: 16px; color: inherit; text-decoration: none;" do %>
+          Cadastrar um Quarto
+        <% end %>
+      </li>
+      <li id="link-to-create-reservas"
+          onmouseover=sombrear("link-to-create-reservas")
+          onmouseout=resetarSombrear("link-to-create-reservas")>
+        <%= link_to new_reserva_path, style: "font-size: 16px; color: inherit; text-decoration: none;" do %>
+          Marcar Reserva
+        <% end %>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+<div class="content">
+<%= yield %>
+</div>
+
+<footer>
+  <%= link_to image_tag("icone-github.png", size: '20x20') + " Acesse o Github do Projeto. © 2023 Hotel Sim.",
+              url_for("https://github.com/hotelaria-ufape/hotel-sim"),
+              style: "font-size: inherit; color: inherit; text-decoration: none;
+              display: flex; justify-content: center; align-items: center;" %>
+</footer>
+
+</body>
+
+<script>
+    function sombrear(id) {
+        var elemento = document.getElementById(id);
+        if (elemento) {
+            elemento.style.textShadow = "0px 1px 5px black";
+        } else {
+            console.error('Elemento com o ID ' + id + ' não encontrado.');
+        }
+    }
+
+    function resetarSombrear(id) {
+        var elemento = document.getElementById(id);
+        if (elemento) {
+            elemento.style.textShadow = "none";
+        } else {
+            console.error('Elemento com o ID ' + id + ' não encontrado.');
+        }
+    }
+</script>
 </html>
