Atualizando as views de Criação e Edição de Entidades para traduzir botões e textos.

--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -35,7 +35,11 @@
     </div>
 
     <div class='submit'>
-      <%= form.submit %>
+      <% if cliente.persisted? %>
+        <%= form.submit "Atualizar Cliente" %>
+      <% else %>
+        <%= form.submit "Cadastrar Cliente" %>
+      <% end %>
     </div>
   </div>
 
