--- a/app/views/quartos/_form.html.erb
+++ b/app/views/quartos/_form.html.erb
@@ -40,7 +40,11 @@
     </div>
 
     <div class='submit'>
-      <%= form.submit %>
+      <% if quarto.persisted? %>
+        <%= form.submit "Atualizar Quarto" %>
+      <% else %>
+        <%= form.submit "Cadastrar Quarto" %>
+      <% end %>
     </div>
   </div>
 <% end %>
