--- a/app/views/reservas/_form.html.erb
+++ b/app/views/reservas/_form.html.erb
@@ -40,7 +40,11 @@
     </div>
 
     <div class='submit'>
-      <%= form.submit %>
+      <% if reserva.persisted? %>
+        <%= form.submit "Atualizar Reserva" %>
+      <% else %>
+        <%= form.submit "Criar Entidade" %>
+      <% end %>
     </div>
   </div>
 
