--- a/app/views/reservas/edit.html.erb
+++ b/app/views/reservas/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 id='up-h1'>Editing reserva</h1>
+<h1 id='up-h1'>Atualizar dados de uma Reserva</h1>
 
 <%= render "form", reserva: @reserva %>
 
