Atualizando a Entidade "Quarto" para suportar e validar o Atributo "quantidade_de_hospedes".

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <%= image_tag("quarto-1.jpg", size: '300x200') %>
     <div id="div-quarto-1" class="gallery-cell-div">
       <button onmouseover=mudarCor("div-quarto-1","black","white") onmouseout=resetarCor("div-quarto-1","#fcbe03","black")>
-        Quartos para Casais
+        Quartos para Solteiros e Casais
       </button>
     </div>
   </div>
@@ -33,7 +33,7 @@
     <%= image_tag("quarto-4.jpg", size: '300x200') %>
     <div id="div-quarto-4" class="gallery-cell-div">
       <button onmouseover=mudarCor("div-quarto-4","black","white") onmouseout=resetarCor("div-quarto-4","#fcbe03","black")>
-        Suítes de Luxo
+        Suítes Master
       </button>
     </div>
   </div>
