--- a/app/views/quartos/_quarto.html.erb
+++ b/app/views/quartos/_quarto.html.erb
@@ -24,4 +24,9 @@
     <%= quarto.descricao %>
   </p>
 
+  <p class='show-item'>
+    <strong>Quantidade de Hóspedes:</strong>
+    <%= quarto.quantidade_de_hospedes %>
+  </p>
+
 </div>
