--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -74,7 +74,7 @@ footer {
 }
 
 /* Espaços de Margem */
-.gallery-cell:before {
+.gallery-cell::before {
     display: block;
     text-align: center;
     color: white;
