Rota e views de quarto atualizadas para exibir historico de hospedagem do quarto

--- a/app/views/quartos/index.html.erb
+++ b/app/views/quartos/index.html.erb
@@ -19,8 +19,9 @@
   <tr class='tr-show'>
     <% @quartos.each do |quarto| %>
       <p class='show-grid'> [ Quarto: <%= quarto.numero %>  -
-        Status: <%= quarto.disponibilidade ? "Disponível" : "Indisponível" %> ] <br> Preço: R$<%= quarto.preco_diaria %>
-        0 <br> <%= link_to "Exibir quarto", quarto, id: "d-#{quarto.numero}" %></p>
+        Status: <%= quarto.disponibilidade ? "Disponível" : "Indisponível" %> ] <br> Preço: R$<%= quarto.preco_diaria %>0
+        <br> <%= link_to "Exibir quarto", quarto, id: "d-#{quarto.numero}" %>
+        <br> <%= link_to "Visualizar Histórico", historico_hospedagem_quarto_path(quarto) %></p>
     <% end %>
   </tr>
 </div>
