--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -11,7 +11,8 @@
 <div class='list'>
   <tr class='tr-show'>
     <% @clientes.each do |cliente| %>
-      <p class='show-grid'> [ <%= cliente.nome %> ] <br> <%= link_to "Exibir cliente", cliente, id:"d-#{cliente.nome}" %></p>
+      <p class='show-grid'> [ <%= cliente.nome %> ] <br> <%= link_to "Exibir cliente", cliente, id:"d-#{cliente.nome}" %> <br>
+      <%= link_to "Visualizar reservas", historico_cliente_path(cliente) %></p>
     <% end %>
   </tr>
 </div>
