--- a/app/views/quartos/index.html.erb
+++ b/app/views/quartos/index.html.erb
@@ -17,15 +17,18 @@
 </div>
 
 <div id="quartos" class='list'>
+  <% if @quartos.any? %>
   <tr class='tr-show'>
     <% @quartos.each do |quarto| %>
       <p class='show-grid'> [ Quarto: <%= quarto.numero %> -
         Status: <%= quarto.disponibilidade ? "Disponível" : "Indisponível" %> ] <br> Preço: R$<%= quarto.preco_diaria %>
         <br> <%= link_to "Exibir quarto", quarto, id: "d-#{quarto.numero}" %>
     <% end %>
+  <% else %>
+        Nenhum quarto encontrado.</p>
+  <% end %>
   </tr>
 </div>
-
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
