--- a/app/views/reservas/_form.html.erb
+++ b/app/views/reservas/_form.html.erb
@@ -2,7 +2,8 @@
   <div class='errors'>
     <% if reserva.errors.any? %>
       <div style="color: red">
-        <h2><%= pluralize(reserva.errors.count, "erro") %> impedem esta reserva de ser criada (passe o mouse por cima para ver mais detalhes)</h2>
+        <h2><%= pluralize(reserva.errors.count, "erro") %> impedem esta reserva de ser criada (passe o mouse por cima
+          para ver mais detalhes)</h2>
 
         <ul>
           <% reserva.errors.each do |error| %>
